# uvc-videoconf

./: .gitignore  CMakeLists.txt  README.md  args-clnt.c  args-srv.c  args.h  common.h  log.c  log.h  tcp_connection.c  tcp_connection.h  test.c  utils.c  utils.h  uvc-client.c  uvc-server.c
